readme correction